Fixed major site width bug
Fixed a bug that stretched the sites width too far beyond the screen.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,29 @@
-@charset "UTF-8";
 /* index CSS Document */
 
 /*Background*/
 body {
-	background-color: rgb(255, 255, 255);
 	margin: 0 auto;
 	width: 100%;
 }
 /*End of Background*/
+
 /*Header*/
 #header {
 	background-color: rgb(181, 183, 186);
-	color: rgb(142, 142, 142);
-	padding: 10px;
-	width: auto;
-	text-align: center;
+	padding-top: 1px;
 }
-#header ul {
-	text-align: center;
+#headerContainer {
 	padding: 5px;
+	width: auto;
 }
-#header li {
+#headerList {
+	text-align: center;
+}
+#headerList li {
 	display: inline;
 	padding: 5px;
 }
-#header ul a {
+#headerList a {
 	text-decoration: none;
 }
 .inactiveButtons {
@@ -33,7 +32,7 @@ body {
 .activeButtons {
 	color: rgb(0, 217, 255);
 }
-#header ul a:hover {
+#headerList a:hover {
 	text-shadow: 2px 2px 10px rgb(255, 255, 255);
 }
 /*#header form {
@@ -46,30 +45,30 @@ body {
 	color: white;
 }*/
 								/*Title 'Christopher Leveston'*/
-#name a {
+#name {
 	text-align: center;
-	text-decoration: none;
-	font-family:fantasy;
+	font-family: fantasy, sans-serif, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	font-size: 48px;
-	margin: auto;
 	color: white;
 	text-shadow: 2px 2px 20px rgb(255, 255, 255);
 }
+#name a {
+	color: white;
+	text-decoration: none;
+}
 								/*Title 'Art of Christopher Leveston'*/
-p#phrase {
+#phrase {
 	text-align: center;
 	color: white;
 	font-size: 24px;
-	margin-bottom: 5px;
-	margin-top: 5px;
 }
 /*End of Header*/
 /*----------------------------------------------*/
 /*Content*/
+.Content {
+	width: auto;
+}
 #aboutMe {
-    width: auto;
-    height: auto;
-    overflow: auto;
     text-align: center;
 }
  #aboutMeImage1 {
@@ -79,8 +78,8 @@ p#phrase {
     width: 15%;
 }
 figcaption {
-    width: 60%;
-    margin: auto;
+	width: 60%;
+	margin: auto;
     font-weight: bold;
     font-family: verdana, helvetica, times, georgia, sans-serif;
 }
@@ -95,14 +94,13 @@ figcaption {
 	font-weight: bold;
 	font-family: sans-serif, 'Times New Roman', Times, serif;
 }
+#webProjectsContainer {
+	padding: 3px;
+	width: auto;
+}
 #webProjectsHeading {
 	width: auto;
 	padding: 0;
-}
-#webProjectsContainer {
-	padding: 3px;
-	margin: 0 auto;
-	width: 100%;
 }
 #personalSite {
 	font-size: 40px;
